# mcpp-byte-span

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
include/mcpp/: byte_span.hpp
include/mcpp/byte_span/: byte_span.hpp
tests/: CMakeLists.txt  byte_span.cpp
